--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
